# TekWhisperer

./: .gitignore  LICENSE  README.md  config.example.toml  pyproject.toml
tekwhisperer/: __init__.py  app.py  audio.py  brain.py  cli.py  config.py  hotkeys.py  injector.py  stt.py  tts.py
