[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "tekwhisperer"
version = "0.1.0"
description = "A tray-based voice bridge for hands-free coding with Faster-Whisper, OpenAI, and guarded IDE injection."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "William Best" }]
dependencies = [
    "anthropic>=0.50.0",
    "faster-whisper>=1.1.1",
    "numpy>=1.26",
    "openai>=1.99.0",
    "pillow>=10.0",
    "pyautogui>=0.9.54",
    "pygetwindow>=0.0.9; platform_system == 'Windows'",
    "pynput>=1.7.7",
    "pyperclip>=1.9.0",
    "pystray>=0.19.5",
    "pyttsx3>=2.90",
    "sounddevice>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]

[project.scripts]
tek-whisperer = "tekwhisperer.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["tekwhisperer"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
